--- a/twitter_alamofire_demo/Base.lproj/Main.storyboard
+++ b/twitter_alamofire_demo/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,7 +35,7 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="yun-OK-dTN">
-                                <rect key="frame" x="87.5" y="50" width="200" height="200"/>
+                                <rect key="frame" x="88" y="50" width="200" height="200"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -66,30 +67,113 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ctl-bI-Eag">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="103" id="U1g-kw-izy" customClass="TweetCell" customModule="twitter_alamofire_demo" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="103"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="200" id="U1g-kw-izy" customClass="TweetCell" customModule="twitter_alamofire_demo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="U1g-kw-izy" id="zd2-Er-659">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="102.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I love tweeting!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epC-Fs-Q5Z">
-                                                    <rect key="frame" x="8" y="8" width="359" height="20.5"/>
+                                                    <rect key="frame" x="66" y="34" width="301" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FvT-aB-7Us">
+                                                    <rect key="frame" x="66" y="63" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="Ioa-WE-osU"/>
+                                                        <constraint firstAttribute="width" constant="45" id="eDn-yP-hae"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Reply" image="reply-icon"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8js-Dk-gxP">
+                                                    <rect key="frame" x="66" y="8" width="75" height="18"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="XzX-1a-scF">
+                                                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="iGi-X4-KSE"/>
+                                                        <constraint firstAttribute="width" constant="50" id="p5E-Wn-A27"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="screen name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBN-8h-vp6">
+                                                    <rect key="frame" x="149" y="8" width="88" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTR-0s-lac">
+                                                    <rect key="frame" x="245" y="8" width="73" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TzP-Dd-Atp">
+                                                    <rect key="frame" x="164" y="63" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="Oyt-zi-iGw"/>
+                                                        <constraint firstAttribute="width" constant="45" id="cLb-Wg-42P"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Retweet" image="retweet-icon"/>
+                                                    <state key="selected" image="retweet-icon-green"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckK-N9-I7w">
+                                                    <rect key="frame" x="209" y="75" width="53" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tm2-rN-cGJ">
+                                                    <rect key="frame" x="307" y="75" width="52" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OcU-nt-4ZV">
+                                                    <rect key="frame" x="262" y="63" width="45" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="H5H-eg-GGM"/>
+                                                        <constraint firstAttribute="width" constant="45" id="hOm-w2-CZt"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Favorite" image="favor-icon"/>
+                                                    <state key="selected" image="favor-icon-red"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="L9O-b1-wwg"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="epC-Fs-Q5Z" secondAttribute="bottom" constant="8" id="QRV-cN-t51"/>
-                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="Rxk-CL-Rn0"/>
-                                                <constraint firstAttribute="trailing" secondItem="epC-Fs-Q5Z" secondAttribute="trailing" constant="8" id="t3O-Hf-fvX"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="tm2-rN-cGJ" secondAttribute="trailing" constant="8" id="58y-qO-Rti"/>
+                                                <constraint firstAttribute="trailing" secondItem="epC-Fs-Q5Z" secondAttribute="trailing" constant="8" id="5Fn-eR-4Zp"/>
+                                                <constraint firstItem="8js-Dk-gxP" firstAttribute="top" secondItem="XzX-1a-scF" secondAttribute="top" id="EGf-DP-Tu4"/>
+                                                <constraint firstItem="RTR-0s-lac" firstAttribute="baseline" secondItem="sBN-8h-vp6" secondAttribute="baseline" id="Jgk-kW-6PT"/>
+                                                <constraint firstItem="ckK-N9-I7w" firstAttribute="centerY" secondItem="FvT-aB-7Us" secondAttribute="centerY" id="Khg-DD-it1"/>
+                                                <constraint firstItem="ckK-N9-I7w" firstAttribute="leading" secondItem="TzP-Dd-Atp" secondAttribute="trailing" id="OOQ-b7-hnE"/>
+                                                <constraint firstItem="TzP-Dd-Atp" firstAttribute="leading" secondItem="FvT-aB-7Us" secondAttribute="trailing" constant="53" id="SYT-6d-KIL"/>
+                                                <constraint firstItem="FvT-aB-7Us" firstAttribute="top" secondItem="epC-Fs-Q5Z" secondAttribute="bottom" constant="8" id="UXZ-I5-x8w"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="RTR-0s-lac" secondAttribute="trailing" constant="8" id="Yea-YM-u0t"/>
+                                                <constraint firstItem="XzX-1a-scF" firstAttribute="leading" secondItem="zd2-Er-659" secondAttribute="leading" constant="8" id="Z0V-HE-lvg"/>
+                                                <constraint firstItem="RTR-0s-lac" firstAttribute="leading" secondItem="sBN-8h-vp6" secondAttribute="trailing" constant="8" id="Zgq-uR-mk5"/>
+                                                <constraint firstItem="FvT-aB-7Us" firstAttribute="leading" secondItem="epC-Fs-Q5Z" secondAttribute="leading" id="avB-Tt-NfI"/>
+                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="leading" secondItem="8js-Dk-gxP" secondAttribute="leading" id="bK7-WP-SM3"/>
+                                                <constraint firstItem="XzX-1a-scF" firstAttribute="top" secondItem="zd2-Er-659" secondAttribute="top" constant="8" id="cow-9I-ZnI"/>
+                                                <constraint firstItem="tm2-rN-cGJ" firstAttribute="centerY" secondItem="FvT-aB-7Us" secondAttribute="centerY" id="eYV-wW-eV8"/>
+                                                <constraint firstItem="epC-Fs-Q5Z" firstAttribute="top" secondItem="8js-Dk-gxP" secondAttribute="bottom" constant="8" id="eat-DK-ZQx"/>
+                                                <constraint firstItem="tm2-rN-cGJ" firstAttribute="leading" secondItem="OcU-nt-4ZV" secondAttribute="trailing" id="eib-4T-iJ4"/>
+                                                <constraint firstItem="OcU-nt-4ZV" firstAttribute="leading" secondItem="TzP-Dd-Atp" secondAttribute="trailing" constant="53" id="fDr-f1-gW3"/>
+                                                <constraint firstItem="OcU-nt-4ZV" firstAttribute="centerY" secondItem="FvT-aB-7Us" secondAttribute="centerY" id="hNi-On-O9M"/>
+                                                <constraint firstItem="TzP-Dd-Atp" firstAttribute="centerY" secondItem="FvT-aB-7Us" secondAttribute="centerY" id="iM3-SD-UZ5"/>
+                                                <constraint firstItem="sBN-8h-vp6" firstAttribute="leading" secondItem="8js-Dk-gxP" secondAttribute="trailing" constant="8" id="jQW-UD-GCb"/>
+                                                <constraint firstItem="sBN-8h-vp6" firstAttribute="bottom" secondItem="8js-Dk-gxP" secondAttribute="bottom" id="lpN-Sp-KQj"/>
+                                                <constraint firstItem="8js-Dk-gxP" firstAttribute="leading" secondItem="XzX-1a-scF" secondAttribute="trailing" constant="8" id="pbE-Gg-CJG"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="FvT-aB-7Us" secondAttribute="bottom" constant="22" id="wtg-yy-ZdH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -137,5 +221,10 @@
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="favor-icon-red" width="30" height="30"/>
+        <image name="reply-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <image name="retweet-icon-green" width="30" height="30"/>
     </resources>
 </document>
